--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^8.2.0",
     "typescript": "^4.4.3"
   },
