--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "publish": "npm version patch && npm publish"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "cli-highlight": "^2.1.11",
     "commander": "^8.2.0",
     "typescript": "^4.4.3"
   },
