--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "node dist/index.js",
-    "publish-package": "npm version patch && npm publish"
+    "publish-package": "test -f setup-env.sh && bash setup-env.sh;npm version patch && npm publish"
   },
   "dependencies": {
     "chalk": "^4.1.2",
