--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "publish-package": "test -f setup-env.sh && bash setup-env.sh && npm version patch && npm publish"
   },
   "dependencies": {
+    "@types/inquirer": "^8.1.3",
+    "@types/inquirer-autocomplete-prompt": "^1.3.3",
     "chalk": "^4.1.2",
     "cli-highlight": "^2.1.11",
     "commander": "^8.2.0",
+    "inquirer": "^8.2.0",
+    "inquirer-autocomplete-prompt": "^1.4.0",
     "marked": "^3.0.4",
     "marked-terminal": "^4.2.0",
     "typescript": "^4.4.3"
